# DynaCut

./: .gitignore  LICENSE  README.md  check_star.py  check_star_2.py  epj_submission_tasks.md  plot_results.py  pyproject.toml  requirements.txt  setup.py  test_cuts.py  test_cuts2.py  test_cuts_lih.py  test_eig.py  test_nature.py
dynacut/: __init__.py  adaptive_scheduler.py  baselines.py  executor.py  experiment_runner.py  ground_state.py  hamiltonians.py  knitting.py  noise_mitigation.py  profiler.py  topology.py
experiments/: ablation_depth.py  ablation_entanglement.py  ablation_fragment_size.py  ablation_optimizer.py  ablation_partitioner.py  adversarial_graphs.py  analyze_sprint3.py  baseline_comparison.py  check_jobs.py  config.yaml  create_approx_table.py  cross_ansatz.py  cross_problem.py  debug_pareto.py  debug_plot.py  entanglement_vs_noise.py  gen_topology_stress.py  generate_all_figures.py  generate_latex_tables.py  generate_paper_tables.py  gw_baseline.py  merge_adv_graphs.py  noise_impact.py  phase10_breakeven_curve.py  phase11_variance_decomposition.py  phase12_qpd_overhead.py  phase15_cold_start.py  phase16_noise_profiles.py  phase17_dynamic_p.py  phase19_plot_paths.py  phase1_math_rigor.py  phase2_scalability.py  phase3_vqe_convergence.py  phase4_benchmark_sweep.py  phase4_cut_vs_uncut_error.py  phase4_partitioner_ablation.py  phase4_topology_stress.py  phase4_vram_and_time_scaling.py  phase5_ibm_hardware.py  phase5_mps_baseline.py  (+25 more)
paper/: main.tex
results/: ablation_chemistry.json  ablation_depth_raw.json  ablation_depth_stats.json  (+161 more)
(+33 files in other folders)
